Convert SDL3 to SDL2, and fixing deploy

--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -6,13 +6,16 @@ endif()
 #---------------------------------------------------------------------------------------------
 set(PROJECT_NAME App)
 project(${PROJECT_NAME} )
-message("${BoldGreen}${PROJECT_NAME} BUILD ${ColourReset}")
+message("${BoldGreen}-- ${PROJECT_NAME} BUILD ${ColourReset}")
 #---------------------------------------------------------------------------------------------
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
-set(CMAKE_CXX_FLAGS ${CMAKE_C_FLAGS})
+set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS}")
 #---------------------------------------------------------------------------------------------
 add_executable(${PROJECT_NAME}
         main.cpp
+        globals.hpp
+        FSM.hpp
+        app.hpp app.cpp
 )
 #---------------------------------------------------------------------------------------------
 include(Core)
