--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -8,6 +8,7 @@ set(PROJECT_NAME App)
 project(${PROJECT_NAME} C CXX)
 message("${BoldGreen}-- ${PROJECT_NAME} BUILD ${ColourReset}")
 #---------------------------------------------------------------------------------------------
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS}")
 #---------------------------------------------------------------------------------------------
