OOP refactor, add UI(imgui) class, GLFW class

--- a/App/CMakeLists.txt
+++ b/App/CMakeLists.txt
@@ -17,6 +17,8 @@ add_executable(${PROJECT_NAME}
         globals.hpp
         FSM.hpp
         app.hpp app.cpp
+        glfw.hpp glfw.cpp
+        ui.hpp ui.cpp
 )
 #---------------------------------------------------------------------------------------------
 include(Core)
